[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-common"
version = "0.1.0"
description = "Common utilities for Cloudmesh AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tzlocal>=5.0",
    "humanize>=4.0",
    "psutil>=5.9.0",
    "cloudmesh-common>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloudmesh.ai.common*"]
