[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-common"
dynamic = ["version"]
description = "Shared utilities for the Cloudmesh AI ecosystem, providing system introspection, structured telemetry, standardized logging, and unified remote execution."
readme = "README.md"
license = "Apache-2.0"
urls = { "Homepage" = "https://github.com/cloudmesh-ai/cloudmesh-ai-common" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
keywords = ["cmc", "extension", "cli", "click", "cloudmesh"]
dependencies = [
    "click",
    "rich",
    "shellingham",
    "psutil",
    "PyYAML",
    "humanize",
    "tzlocal",
    "paramiko",
    "aiofiles",
    "pyfiglet",
    "sshconf",
    "fabric",
    "python-dateutil",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-html",
    "pytest-mock",
    "pytest-cov",
    "pip-tools",
    "twine",
    "ruff",
    "mypy",
    "pytest-asyncio",
]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools]
# Tells setuptools to look inside the 'src' directory for packages
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloudmesh*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
